testdata/baselines/reference/submodule/compiler/jsFileCompilationDuplicateFunctionImplementation.errors.txt
a.ts(1,10): error TS2393: Duplicate function implementation.
b.js(1,10): error TS2393: Duplicate function implementation.


==== b.js (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 10;
    }
==== a.ts (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 30;
    }
    
    